# swarms-rs

examples/: tool_call_type_safety.rs
swarms-rs/: Cargo.toml
swarms-rs/examples/: hierarchical_swarm_example.rs  md_agent.rs  minimal_md_agent.rs  sequential_workflow_md.rs
swarms-rs/src/: lib.rs
swarms-rs/src/agent/: swarms_agent.rs
swarms-rs/src/prompts/: hierarchical_system_prompt.rs  mod.rs
swarms-rs/src/structs/: agent.rs  conversation.rs  hierarchical_swarm.rs  mod.rs  sequential_workflow.rs  swarms_client.rs  utils.rs
swarms-rs/src/utils/: formatter.rs  mod.rs
