[package]
name = "swarms-rs"
version = "0.2.0"
edition = "2024"
description = "The Enterprise-Grade Production-Ready Multi-Agent Orchestration Framework in Rust"
authors = ["Kye Gomez <kye@kyegomez.com>"]
license = "Apache-2.0"
repository = "https://github.com/The-Swarm-Corporation/swarms-rs"
documentation = "https://docs.rs/swarms-rs"
readme = "README.md"
keywords = ["ai", "agents", "swarms", "multi-agent", "llm"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "5", features = ["serde"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.4"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.0"
tokio-rustls = "0.24"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "1"
zstd = "0.12"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
tui = { version = "0.19", features = ["crossterm"] }
crossterm = "0.27"
indicatif = "0.17"
petgraph = { version = "0.6", default-features = false, features = [
    "stable_graph",
] }
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "multipart",
    "rustls-tls-native-roots",
], default-features = false }
async-openai = { version = "0.16" }
anyhow = "1"
async-trait = "0.1"

# rmcp = { version = "0.1.4", features = [
#     "client",
#     "transport-sse",
#     "transport-child-process",
# ] }
lazy_static = "1.4"
dirs = "5.0"

# macro
swarms-macro = { version = "0.1.0", path = "../swarms-macro" }

[[bin]]
name = "swarms-cli"
path = "src/bin/swarms_cli.rs"

[dev-dependencies]
anyhow = "1"
tempfile = "3.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "concurrent_workflow_benchmarks"
harness = false

[[bench]]
name = "graph_workflow_benchmarks"
harness = false

[[example]]
name = "logging_example"
path = "examples/logging_example.rs"

[[example]]
name = "cli_example"
path = "examples/cli_example.rs"

[[example]]
name = "minimal_md_agent"
path = "examples/minimal_md_agent.rs"

[[example]]
name = "hierarchical_swarm_example"
path = "examples/hierarchical_swarm_example.rs"

[[example]]
name = "md_agent"
path = "examples/md_agent.rs"

[[example]]
name = "memory_vs_parallel_example"
path = "examples/memory_vs_parallel_example.rs"

[[example]]
name = "formatter_test_agent"
path = "examples/formatter_test_agent.rs"

[[example]]
name = "enhanced_formatter_demo"
path = "examples/enhanced_formatter_demo.rs"

[[example]]
name = "streaming_formatter_example"
path = "examples/streaming_formatter_example.rs"

[[example]]
name = "concurrent_workflow_run"
path = "examples/concurrent_workflow_run.rs"

[[example]]
name = "sequential_workflow"
path = "examples/sequential_workflow.rs"

[[example]]
name = "test_openai_fallback"
path = "examples/test_openai_fallback.rs"

[[example]]
name = "simple_working_example"
path = "examples/simple_working_example.rs"

[[example]]
name = "working_swarm_example"
path = "examples/working_swarm_example.rs"

[[example]]
name = "agent_rearrange_example"
path = "examples/agent_rearrange_example.rs"

[[example]]
name = "batch_executor_example"
path = "examples/batch_executor_example.rs"

[[example]]
name = "concurrent_workflow_run_batch"
path = "examples/concurrent_workflow_run_batch.rs"

[[example]]
name = "financial_analysis_swarm"
path = "examples/financial_analysis_swarm.rs"

[[example]]
name = "graph_workflow"
path = "examples/graph_workflow.rs"

[[example]]
name = "mcp_tool"
path = "examples/mcp_tool.rs"

[[example]]
name = "simple_agent"
path = "examples/simple_agent.rs"

[[example]]
name = "swarm_router"
path = "examples/swarm_router.rs"

[[example]]
name = "test_concurrent"
path = "examples/test_concurrent.rs"

[[example]]
name = "tool"
path = "examples/tool.rs"
